--- a/ImprovedUI/Public/Game/GUI/Widgets/CharacterCreation_c.xaml
+++ b/ImprovedUI/Public/Game/GUI/Widgets/CharacterCreation_c.xaml
@@ -2714,7 +2714,9 @@
                                                         <ListBox x:Name="classCarousel" Template="{StaticResource AnimatedIconCarouselTemplate}" ItemsSource="{Binding SelectableClasses}" SelectedItem="{Binding SelectedClass}">
                                                             <ListBox.ItemTemplate>
                                                                 <DataTemplate>
-                                                                    <Image x:Name="classIcon" Style="{StaticResource ClassIconStyle}" Stretch="None"/>
+                                                                    <!-- MOD START - Use main class instead of subclass icon -->
+																	<Image x:Name="classIcon" Style="{StaticResource MainClassIconStyle}" Stretch="None"/>
+																	<!-- MOD END -->
                                                                     <DataTemplate.Triggers>
                                                                         <DataTrigger Binding="{Binding IsSelected, RelativeSource={RelativeSource AncestorType={x:Type ListBoxItem}}}" Value="False">
                                                                             <Setter TargetName="classIcon" Property="Width" Value="{StaticResource UnselectedCarouselIconSize}"/>
