--- a/ImprovedUI/Public/Game/GUI/StateMachine.xaml
+++ b/ImprovedUI/Public/Game/GUI/StateMachine.xaml
@@ -408,6 +408,44 @@
             </ls:State.Events>
         </ls:State>
 
+        <!--STATE: CharacterChangeAppearance -->
+        <ls:State Name = "CharacterChangeAppearance" HideStatesBelow = "True" DisableStatesBelow = "True" Layout = "Player" Owner = "Player" ForceSplitscreen="True">
+            <ls:State.Widgets>
+                <ls:StateWidget Filename="AlwaysOnTopOverlay.xaml" Layer="MessageBox"/>
+                <ls:StateWidget Filename="Notification.xaml" Layer="Default"/>
+                <ls:StateWidget Filename="CharacterChangeAppearance.xaml" Layer="HUD"/>
+                <ls:StateWidget Filename="ScreenFade.xaml" Layer="ScreenFade" BlockedLoading="True"/>
+            </ls:State.Widgets>
+
+            <ls:State.Events>
+                <ls:StateEvent Name = "CloseWidget">
+                    <ls:StateEvent.Actions>
+                        <ls:RemoveState/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
+                <ls:StateEvent Name = "ToggleGameMenu">
+                    <ls:StateEvent.Actions>
+                        <ls:PushState Name="Paused"/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
+                <ls:StateEvent Name = "IE.ToggleInGameMenu">
+                    <ls:StateEvent.Actions>
+                        <ls:PushState Name="Paused"/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
+                <ls:StateEvent Name = "OpenMessageBox">
+                    <ls:StateEvent.Actions>
+                        <ls:AddSubstate Name="MessageBox"/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
+                <ls:StateEvent Name = "OpenPinnedTooltips">
+                    <ls:StateEvent.Actions>
+                        <ls:AddSubstate Name="PinnedTooltips"/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
+            </ls:State.Events>
+        </ls:State>        
+        
         <!--STATE: Henchmen -->
         <ls:State Name = "Henchmen" HideStatesBelow = "True" DisableStatesBelow = "True" Layout = "Common" Owner = "Player">
             <ls:State.Widgets>
@@ -528,6 +566,13 @@
                     <ls:StateEvent.Actions>
                         <ls:RemoveState/>
                         <ls:PushState Name="Dialogue"/>
+                        <ls:PushState Name="Paused"/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
+                <ls:StateEvent Name = "OpenReactionsPopup">
+                    <ls:StateEvent.Actions>
+                        <ls:RemoveState/>
+                        <ls:PushState Name="ReactionsPopup"/>
                         <ls:PushState Name="Paused"/>
                     </ls:StateEvent.Actions>
                 </ls:StateEvent>
@@ -706,6 +751,16 @@
                         <ls:PushState Name="CharacterRespec"/>
                     </ls:StateEvent.Actions>
                 </ls:StateEvent>
+                <ls:StateEvent Name = "OpenReactionsPopup">
+                    <ls:StateEvent.Actions>
+                        <ls:AddSubstate Name="ReactionsPopup"/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
+                <ls:StateEvent Name = "OpenCharacterChangeAppearance">
+                    <ls:StateEvent.Actions>
+                        <ls:PushState Name="CharacterChangeAppearance"/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>                
             </ls:State.Events>
         </ls:State>
 
@@ -737,7 +792,6 @@
                 <ls:StateWidget Filename="OverheadInfo.xaml" Layer="HUD" IgnoreHitTest="True"/>
                 <ls:StateWidget Filename="WorldTooltips.xaml" Layer="HUD"/>
                 <ls:StateWidget Filename="HotBar.xaml" Layer="HUDTop"/>
-                <ls:StateWidget Filename="ReactionDecisionPopup.xaml" Layer="Notifications"/>
                 <ls:StateWidget Filename="Minimap.xaml" Layer="HUD"/>
                 <ls:StateWidget Filename="TargetInfo.xaml" Layer="HUD" IgnoreHitTest="True"/>
                 <ls:StateWidget Filename="PlayerPortraits.xaml" Layer="PopupPanels"/>
@@ -764,6 +818,25 @@
 
         </ls:State>
 
+        <!--STATE: ReactionsPopup -->
+        <ls:State Name = "ReactionsPopup" Layout = "Player" Owner = "Player" DisableStatesBelow="True">
+            <ls:State.Widgets>
+                <ls:StateWidget Filename="ReactionDecisionPopup.xaml" Layer="PopupPanels"/>
+            </ls:State.Widgets>
+            <ls:State.Events>
+                <ls:StateEvent Name = "CloseReactionsPopup">
+                    <ls:StateEvent.Actions>
+                        <ls:RemoveState/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
+                <ls:StateEvent Name = "IE.ToggleInGameMenu">
+                    <ls:StateEvent.Actions>
+                        <ls:PushState Name="Paused"/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
+            </ls:State.Events>
+        </ls:State>
+        
         <!--STATE: SelectionFlyOut-->
         <ls:State Name= "SelectionFlyOut" Layout="Player" Owner="Player">
             <ls:State.Widgets>
