--- a/ImprovedUI/Public/Game/GUI/StateMachine_c.xaml
+++ b/ImprovedUI/Public/Game/GUI/StateMachine_c.xaml
@@ -335,11 +335,13 @@
                         <ls:PushState Name="Paused"/>
                     </ls:StateEvent.Actions>
                 </ls:StateEvent>
-                <ls:StateEvent Name = "OpenMessageBox">
+                <!-- MOD START - Remove CC tutorial message -->
+				<!--<ls:StateEvent Name = "OpenMessageBox">
                     <ls:StateEvent.Actions>
                         <ls:AddSubstate Name="MessageBox"/>
                     </ls:StateEvent.Actions>
-                </ls:StateEvent>
+                </ls:StateEvent>-->
+				<!-- MOD END -->
                 <ls:StateEvent Name = "OpenPinnedTooltips">
                     <ls:StateEvent.Actions>
                         <ls:AddSubstate Name="PinnedTooltips"/>
